--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="quienes.html">Quienes Somos <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="formulario.html">Formulario</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
