--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
               <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
             </form>
           </div>
-        </nav>
+        </nav> <!--Fin del nav-->
 
         <h2>Nuestras aguas son las mejores</h2>
 
@@ -89,7 +89,7 @@
             <img class="imagen-agua" src="imagenes/agua_1.jpeg" alt="Imagen de agua">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, natus incidunt id ad, ut ratione atque sint numquam officiis dicta iure. Veniam, ad. Quaerat neque distinctio ipsa ducimus sequi vitae?</p>
           </div>
-        </section>
+        </section> <!--Fin del section-->
 
         <footer class="row bg-dark">
           <div class="col-12">
