--- a/quienes.html
+++ b/quienes.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-
+  <div class="container">
     <h1>Liquid Water</h1>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -45,7 +45,25 @@
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
-      </nav>
-    
+      </nav> <!-- Fin del nav -->
+
+      <section class="row">
+        <main class="col-8">
+          <img src="imagenes/agua_3.jpeg" alt="Imagen de agua">
+        </main>
+
+        <aside class="col-4">
+          <p>Somos pioneros en la producción y distribución de agua purificada. Nuestra misión es entregar agua de alto nivel a nuestros clientes, nos dedicamos a la elaboración, producción y distribución de agua purificada en distintos formatos. Nuestro enfoque es proporcionar un servicio confiable, cercano y de alto nivel, contando con personal altamente especializado y equipos de alta tecnología.</p>
+        </aside>
+      </section> <!-- Fin del section -->
+
+      <div class="space"></div>
+
+      <footer class="row bg-dark">
+        <div class="col-12">
+          <p>Todos los derechos reservados &copy; 2024</p>
+        </div>
+      </footer> <!------------------Fin del footer----------------->
+    </div> <!------------------Fin del container----------------->
 </body>
 </html>
