--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
         </nav> <!--Fin del nav-->
 
         <h2>Nuestras aguas son las mejores</h2>
-
+        <div class="raya"></div>
         <!--Carousel-->
         <div class="carousel row">
           <div class="col-12">
@@ -79,13 +79,15 @@
         </div>
         <!-- Fin de carousel -->
 
+        <div class="raya"></div>
+
         <section class="row">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <img class="imagen-agua" src="imagenes/agua_1.jpeg" alt="Imagen de agua">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, natus incidunt id ad, ut ratione atque sint numquam officiis dicta iure. Veniam, ad. Quaerat neque distinctio ipsa ducimus sequi vitae?</p>
           </div>
 
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <img class="imagen-agua" src="imagenes/agua_1.jpeg" alt="Imagen de agua">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, natus incidunt id ad, ut ratione atque sint numquam officiis dicta iure. Veniam, ad. Quaerat neque distinctio ipsa ducimus sequi vitae?</p>
           </div>
