--- a/quienes.html
+++ b/quienes.html
@@ -48,16 +48,16 @@
       </nav> <!-- Fin del nav -->
 
       <section class="row">
-        <main class="col-8">
+        <main class="col-12 col-lg-8">
           <img src="imagenes/agua_3.jpeg" alt="Imagen de agua">
         </main>
 
-        <aside class="col-4">
+        <aside class="col-12 col-lg-4">
           <p>Somos pioneros en la producción y distribución de agua purificada. Nuestra misión es entregar agua de alto nivel a nuestros clientes, nos dedicamos a la elaboración, producción y distribución de agua purificada en distintos formatos. Nuestro enfoque es proporcionar un servicio confiable, cercano y de alto nivel, contando con personal altamente especializado y equipos de alta tecnología.</p>
         </aside>
       </section> <!-- Fin del section -->
 
-      <div class="space"></div>
+      <div class="space d-none d-lg-block"></div>
 
       <footer class="row bg-dark">
         <div class="col-12">
