changed index, quienes, formulario

--- a/quienes.html
+++ b/quienes.html
@@ -47,6 +47,10 @@
         </div>
       </nav> <!-- Fin del nav -->
 
+      <h3 class="qh3">Somos la empresa mas grande que distribuye agua en Chile</h2>
+
+      <div class="raya"></div>
+
       <section class="row">
         <main class="col-12 col-lg-8">
           <img src="imagenes/agua_3.jpeg" alt="Imagen de agua">
