--- a/formulario.html
+++ b/formulario.html
@@ -48,11 +48,11 @@
       </nav>
 
       <h2>Formulario</h2>
-
+      <div class="raya"></div>
 
 
 <div class="row">
-<div class="col-7 formulario">
+<div class="col-8 formulario">
 <form id="formulario" method="post">
 
 <div class="row">
