--- a/Index.html
+++ b/Index.html
@@ -51,7 +51,7 @@
         <div class="raya"></div>
         <!--Carousel-->
         <div class="carousel row">
-          <div class="col-12">
+          <div class="col-10 ml-auto mr-auto">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
