--- a/cards.html
+++ b/cards.html
@@ -28,16 +28,8 @@
             <li class="nav-item">
               <a class="nav-link" href="formulario.html">Formulario</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="cards.html">Catálogo de Aguas</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="cards.html">Catálogo de Aguas</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -57,38 +49,34 @@
         </p>
     </div>
     <div class="container separacion">
-      
         <!-- PRIMERA FILA -->
         <div class="row p-5">
-            <!-- PRIMERA COLUMNA -->
-            <div class="col-md-4 col-sm-12 contenedor">
-                <div class="card" style="width: 18rem;">
-                    <img src="imagenes/aguaSinGas.webp" class="card-img-top" alt="primerAgua">
-                    <div class="card-body">
-                        <h5 class="card-title">Agua con gas</h5>
-                        <p class="card-text" style="color: black;">Origen: Himalaya<br> 100% Natural<br> Nuestra deliciosa y sana variedad clásica<br>
-                        <a href="#" class="btn btn-primary b_color">Obténlo!</a>
-                    </div>
-                </div>
-            </div>
+             <!-- PRIMERA COLUMNA -->
+          <div class="col-12 col-md-4 carta">
+              <div class="card">
+                  <img src="imagenes/aguaSinGas.webp" class="card-img-top" alt="primerAgua">
+                  <div class="card-body">
+                      <h5 class="card-title">Agua con gas</h5>
+                      <p class="card-text" style="color: black;">Origen: Himalaya<br> 100% Natural<br> Nuestra deliciosa y sana variedad clásica<br>
+                      <a href="#" class="btn btn-primary b_color">Obténlo!</a>
+                  </div>
+              </div>
+          </div>
             <!-- SEGUNDA COLUMNA -->
-            <div class="col-md-4 col-sm-12">
-                <div class="img_reduc">
-                    <div class="card" style="width: 18rem;" >
-                        <img src="imagenes/aguaConGas.webp" class="card-img-top" alt="segundaAgua">
-                        <div class="card-body">
-                            <h5 class="card-title">Agua mineral sin gas</h5>
-                            <p class="card-text" style="color: black;">Origen: Antártica<br>100% Natural<br>Con gas! Para los días de calor</p>
-                            <br> <br/>
-                            <a href="#" class="btn btn-primary b_color">Obténlo!</a> 
-                        </div>
-                    </div>
-                </div>
-            </div>
+          <div class="col-12 col-md-4 carta">
+            <div class="card">
+              <img src="imagenes/aguaConGas.webp" class="card-img-top" alt="segundaAgua">
+              <div class="card-body">
+                  <h5 class="card-title">Agua mineral sin gas</h5>
+                  <p class="card-text" style="color: black;">Origen: Antártica<br>100% Natural<br>Con gas! Para los días de calor</p>
+                  <br> <br/>
+                  <a href="#" class="btn btn-primary b_color">Obténlo!</a> 
+              </div>
+          </div>
+          </div>  
             <!-- TERCERA COLUMNA -->
-            <div class="col-md-4 col-sm-12">
-                <div class="img_reduc">
-                    <div class="card" style="width: 18rem;">
+          <div class="col-12 col-md-4 carta">
+            <div class="card">
                         <img src="imagenes/aguaLimon.jpg" class="card-img-top" alt="terceraAgua">
                         <div class="card-body">
                             <h5 class="card-title">Agua saborizada</h5>
@@ -96,9 +84,14 @@
                             <a href="#" class="btn btn-primary b_color">Obténlo!</a>
                         </div>
                     </div>
-                </div>
-            </div>
+          </div>          
+        </div>        
         </div>
+
+        
+
+
+        <div class="space_3 d-none d-lg-block"></div> 
         <footer class="row bg-dark">
           <div class="col-12">
             <p>Todos los derechos reservados &copy; 2024</p>
