--- a/Index.html
+++ b/Index.html
@@ -28,16 +28,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="formulario.html">Formulario</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="cards.html">Catálogo de Aguas</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+              <li class="nav-item">
+                <a class="nav-link" href="cards.html">Catálogo de Aguas</a>
               </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
