--- a/formulario.html
+++ b/formulario.html
@@ -78,6 +78,26 @@
 </div>
 <br/><br/>
 
+<div class="row">
+  <div class="col-12 col-lg-2 d-lg-flex">
+  <label class="align-self-center" for="contact" style="color: white;">Telefono</label>
+  </div>
+  <div class="col-12 col-lg-10">
+  <input type="text" id="contact" name="contact" placeholder="Introduce tu número telefonico">
+  </div>
+  </div>
+  <br/><br/>
+
+  <div class="row">
+    <div class="col-12 col-lg-2 d-lg-flex">
+    <label class="align-self-center" for="adress" style="color: white;">Dirección</label>
+    </div>
+    <div class="col-12 col-lg-10">
+    <input type="text" id="adress" name="adress" placeholder="Introduce tu dirección">
+    </div>
+    </div>
+    <br/><br/>
+
 <div id="error-message" style="color: red;"></div>
 <input type="submit" value="Submit">
 
