logo, navbar improved and else

--- a/formulario.html
+++ b/formulario.html
@@ -14,7 +14,7 @@
   <div class="container">
     <h1>Liquid Water</h1>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav s class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="Index.html">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
             <li class="nav-item">
               <a class="nav-link" href="quienes.html">Quienes Somos <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="formulario.html">Formulario</a>
             </li>
             <li class="nav-item">
@@ -105,15 +105,13 @@
 </div>
 </div>
 
-<div class="space d-none d-lg-block"></div>
-
-<footer class="row bg-dark">
-  <div class="col-12">
-    <p>Todos los derechos reservados &copy; 2024</p>
-  </div>
-</footer> <!------------------Fin del footer----------------->
-
-</div> <!------------------Fin del container----------------->
+<div class="space_3 d-none d-lg-block"></div> 
+        <footer class="row bg-dark">
+          <div class="col-12">
+            <p>Todos los derechos reservados &copy; 2024</p>
+          </div>
+        </footer> <!------------------Fin del footer----------------->
+      </div> <!------------------Fin del container----------------->
 
 <script src="script.js"></script>
 
