--- a/quienes.html
+++ b/quienes.html
@@ -14,7 +14,7 @@
   <div class="container">
     <h1>Liquid Water</h1>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav style="border-radius: 10px;" class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand disabled" href="Index.html">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
