--- a/cards.html
+++ b/cards.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Liquid Water</h1>
+    <h1><img id="logo" style="width: 100px; height: 100px;" src="imagenes/LogoLQW.png" alt="logo">Liquid Water</h1>
     <!--Navbar-->
     <nav style="border-radius: 10px;"| class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="Index.html">Inicio</a>
