--- a/quienes.html
+++ b/quienes.html
@@ -12,8 +12,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Liquid Water</h1>
-
+    <h1><img id="logo" style="width: 100px; height: 100px;" src="imagenes/LogoLQW.png" alt="logo">Liquid Water</h1>
     <nav style="border-radius: 10px;" class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand disabled" href="Index.html">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
