changes in index.html

--- a/Index.html
+++ b/Index.html
@@ -53,9 +53,9 @@
         <h2>Nuestras aguas son las mejores</h2>
         <div class="raya"></div>
         <!--Carousel-->
-        <div style="border-radius: 10px;" class="carousel row">
-          <div style="border-radius: 10px;" class="col-10 ml-auto mr-auto">
-            <div style="border-radius: 10px;" id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel row">
+          <div class="col-12 col-md-10 ml-auto mr-auto">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="imagenes/agua_2.jpg" alt="First slide">
