changes quienes.html and style.css

--- a/quienes.html
+++ b/quienes.html
@@ -65,15 +65,15 @@
 
       <!-- Button trigger modal -->
 
-      <div class="row d-flex flex-column box-names">
+      <div class="row box-names text-center">
         <div class="col-12">
-          <p class="names">- Christian Sarria</p>
-          <p class="names">- Miguel Sierra</p>
-          <p class="names">- Cristobal Hernandez</p>
+          <p class="names">Christian Sarria</p>
+          <p class="names">Miguel Sierra</p>
+          <p class="names">Cristobal Hernandez</p>
         </div>
         <div class="col-12">
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Detalles
+            Nuestros trabajos
           </button>
         </div>
       </div>
@@ -89,7 +89,17 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <h3 class="modal-title">Inicio</h3>
+        <img class="img-modal" src="imagenes/trabajo_inicio.png" alt="Imagen de proyecto parte de inicio">
+
+        <h3 class="modal-title">Servicios</h3>
+        <img class="img-modal" src="imagenes/trabajo_servicios.png" alt="Imagen de proyecto parte de servicios">
+
+        <h3 class="modal-title">Formulario</h3>
+        <img class="img-modal" src="imagenes/trabajo_formulario.png" alt="Imagen de proyecto parte de formulario">
+
+        <h3 class="modal-title">Bidones</h3>
+        <img src="imagenes/bidon_agua.jpeg" alt="Imagen de bidón">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
