--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,7 @@
               </a>
             </div>
 
-            <p>rika la agüita siono misangre</p>
+            <p></p>
           </div>
         </div>
         <!-- Fin de carousel -->
@@ -87,11 +87,11 @@
         <section class="row">
           <div class="col-12 col-md-6">
             <img class="imagen-agua" src="imagenes/agua_1.jpeg" alt="Imagen de agua">
-            <p>rika la agüita</p>
+            <p>Agua natural</p>
           </div>
           <div class="col-12 col-md-6">
             <img class="imagen-agua" src="imagenes/agua_1.jpeg" alt="Imagen de agua">
-            <p>rika la agüita</p>
+            <p>Sin componentes externo</p>
           </div>
         </section> <!--Fin del section-->
 
