imagenes del index wonitas

--- a/Index.html
+++ b/Index.html
@@ -86,12 +86,12 @@
 
         <section class="row">
           <div class="col-12 col-md-6">
-            <img class="imagen-agua" src="imagenes/agua_1.jpeg" alt="Imagen de agua">
+            <img class="imagen-agua" src="imagenes/cascada.jpg" alt="Imagen de agua">
             <p>Agua natural</p>
           </div>
           <div class="col-12 col-md-6">
-            <img class="imagen-agua" src="imagenes/agua_1.jpeg" alt="Imagen de agua">
-            <p>Sin componentes externo</p>
+            <img class="imagen-agua" src="imagenes/glaciar.png" alt="Imagen de agua">
+            <p>Sin componentes externos</p>
           </div>
         </section> <!--Fin del section-->
 
