--- a/clima.html
+++ b/clima.html
@@ -31,9 +31,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="cards.html">Catálogo de Aguas</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="clima.html">Clima</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Dropdown
@@ -53,57 +50,34 @@
           </div>
         </nav> <!--Fin del nav-->
 
-        <h2>Nuestras aguas son las mejores</h2>
-        <div class="raya"></div>
-        <!--Carousel-->
-        <div class="carousel row">
-          <div class="col-12 col-md-10 ml-auto mr-auto">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="imagenes/agua_2.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="imagenes/agua_3.jpeg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="imagenes/agua_4.jpeg" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
+        
+    </div>
 
-            <p></p>
-          </div>
-        </div>
-        <!-- Fin de carousel -->
+    <div id="pronex"></div>
 
-        <div class="raya"></div>
+    <script>
 
-        <section class="row">
-          <div class="col-12 col-md-6">
-            <img class="imagen-agua" src="imagenes/cascada.jpg" alt="Imagen de agua">
-            <p>Agua natural</p>
-          </div>
-          <div class="col-12 col-md-6">
-            <img class="imagen-agua" src="imagenes/glaciar.png" alt="Imagen de agua">
-            <p>Sin componentes externos</p>
-          </div>
-        </section> <!--Fin del section-->
+        const settings = {
+	    async: true,
+	    crossDomain: true,
+	    url: 'https://yahoo-weather5.p.rapidapi.com/weather?location=sunnyvale&format=json&u=f',
+	    method: 'GET',
+	    headers: {
+		    'X-RapidAPI-Key': '4e0185050cmsh13eef6eaeb30c9ep1ef17ejsna48f73a5bad5',
+		    'X-RapidAPI-Host': 'yahoo-weather5.p.rapidapi.com'
+	        }
+        };
 
-        <div class="space_3 d-none d-lg-block"></div> 
-        <footer class="row bg-dark">
-          <div class="col-12">
-            <p>Todos los derechos reservados &copy; 2024</p>
-          </div>
-        </footer> <!------------------Fin del footer----------------->
-      </div> <!------------------Fin del container----------------->
-</body> 
-</html>
+        $.ajax(settings).done(function (response) {
+	        console.log(response);
+
+            $.each(response.forecasts, function(i, item){
+                $("#pronex").append(""+"<h2 class='h22'>"+item.day+
+                                " |  Minima: "+item.low+
+                                    "°C | Maxima: "+item.high+"°C"+"</h2>")
+                })
+        });
+
+
+    </script>
+</body>
