--- a/clima.html
+++ b/clima.html
@@ -31,6 +31,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="cards.html">Catálogo de Aguas</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="clima.html">Clima</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Dropdown
@@ -54,7 +57,7 @@
     </div>
 
     <div id="pronex"></div>
-
+    
     <script>
 
         const settings = {
