--- a/quienes.html
+++ b/quienes.html
@@ -21,7 +21,7 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="quienes.html">Quienes Somos <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -29,6 +29,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cards.html">Catálogo de Aguas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="clima.html">Clima</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,7 +50,7 @@
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
-      </nav> <!-- Fin del nav -->
+      </nav> <!--Fin del nav-->
 
       <h3 class="qh3">Somos la empresa mas grande que distribuye agua en Chile</h2>
 
