--- a/clima.html
+++ b/clima.html
@@ -77,7 +77,7 @@
 
             $.each(response.forecasts, function(i, item){
 
-              // Convert temperatures from Fahrenheit to Celsius
+              //temperatura a celsius
         let lowCelsius = Math.round((item.low - 32) * 5 / 9);
         let highCelsius = Math.round((item.high - 32) * 5 / 9);
 
